# sim

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.slang.plugin.ts
.github/workflows/: deploy.yml
artifacts/: sim.html  sim.js  sim.wasm
src/: main.cpp  main.css  main.html  main.ts  shaders.slang  shaders_basic.slang  sim.d.ts  slang.d.ts
